# http-stack

./: CMakeLists.txt  GenWin64.bat  LICENSE  README.md
include/: http.hpp
src/: CMakeLists.txt  http_core.cpp  subsystem_linux.cpp  subsystem_windows.cpp
test/: CMakeLists.txt  main.cpp
